# spectralquant

./: .env.example  .gitignore  LICENSE  Makefile  README.md  codex_wht_threeway_final_report.md  gen_shaped_cache_figures.py  pyproject.toml
configs/: default.yaml  quick.yaml
docs/: claims_discipline.md  consolidated_spectralquant_inventory.md  evidence_catalog.json  evidence_catalog.md  evidence_family_validation_2026-04-30.md  execution_audit_and_modal_runbook.md  full_matrix_evidence_summary.md  modal_safety_protocol.md  result_schema.md  spectralquant_v2_technical_spec.md
experiments/: benchmark_utils.py  codex_wht_vs_pca.py  eval_common.py  longbench_dataset.py  longbench_metrics.py  lowrank_cossim_sweep.py  model_adapters.py  multiregime_sweep.py  neurips_llama_full.py  neurips_models_asymmetry.py  neurips_seeds_latency.py  optimal_allocation_sweep.py  phase0_setup.py  phase1_eigenspectral.py  phase2_integration.py  phase3_exp1_attention_quality.py  phase3_exp2_ablation.py  phase3_exp3_generation.py  phase3_exp4_benchmarks.py  phase3_exp5_vector_search.py  phase3_exp6_latency.py  phase3_exp7_calibration_cost.py  push_to_095.py  run_all_experiments.py  run_calibration_stability.py  run_final_experiments.py  run_generation.py  run_latency.py  run_longbench.py  run_memory_efficiency.py  run_perplexity.py  run_status.py  run_three_way.py  run_v3_deff_distshift_latency.py  run_v3_perplexity_crossarch.py  run_v3_ppl_niah_v2.py  shaped_cache_sweep.py  sqv2_replay.py
paper_output/: generate_figures.py  spectralquant.tex  spectralquant_refs.bib
results/: all_results_summary.json
schemas/: accounting.schema.json  evidence_catalog.schema.json  generation.schema.json  latency.schema.json  longbench.schema.json  perplexity.schema.json  three_way_result.schema.json
scripts/: _relaunch_watch.sh  audit_results.py  build_paper_figures.py  launch_modal_eval.py  launch_modal_three_way.py  merge_longbench_partials.py  preflight_modal.py  run_all.sh  safe_local_cleanup.py  setup_b200.sh
tests/: conftest.py  test_accounting.py  test_calibration.py  test_end_to_end.py  (+20 more)
(+141 files in other folders)
